--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.25.0",
     "jsdom": "^26.0.0",
     "react": "^19.0.0",
