--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "esbuild": "^0.25.0",
     "jsdom": "^26.0.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "vitest": "^3.0.6"
