--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.2.0",
     "vitest": "^3.0.6"
   },
