--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "axios": "^1.7.9",
@@ -23,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.1.3",
     "vitest": "^3.0.6"
   },
   "devDependencies": {
